<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hisamoto</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opções</string>
    <string name="novo_item">Click</string>
	<!--ACTIVITY SHOW-->
	<string name="show_label_nome">Nome:</string>
	<string name="show_label_estado_cidade">Estado/Cidade:</string>
	<string name="show_label_email">E-mail:</string>
	<string name="show_label_telefone">Telefone:</string>
	<string name="show_label_celular">Celular:</string>
    <string name="developer">Leandro Shindi Ekamoto</string>
	<string name="ContextoDados_onCreate">CREATE TABLE IF NOT EXISTS pessoas (id INTEGER PRIMARY KEY, nome TEXT, email TEXT);</string>
    <string name="saudacaoTextView">Olá android</string>
	
</resources>
